# medico24-backend

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  coverage.xml  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml  code-quality.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_create_users_table.py  003_create_pharmacy_tables.py  004_create_push_tokens_table.py  005_create_notifications_table.py  006_create_notification_deliveries_table.py  007_create_user_role_tables.py  008_add_role_table_triggers.py  009_create_clinics_table.py  010_create_doctor_clinics_table.py  011_update_doctors_remove_clinic_fields.py  012_update_appointments_add_fks.py  013_remove_doctors_user_fk.py  014_make_doctors_independent.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  appointments.py  auth.py  clinics.py  doctors.py  environment.py  health.py  notifications.py  pharmacies.py  users.py
app/core/: exceptions.py  firebase.py  redis_client.py  security.py
app/middleware/: error_handler.py  logging.py
app/models/: __init__.py  admins.py  appointments.py  clinics.py  doctor_clinics.py  doctors.py  notifications.py  patients.py  pharmacies.py  pharmacy_staff.py  push_tokens.py  users.py
app/schemas/: admin.py  appointments.py  auth.py  clinics.py  doctor_clinics.py  doctors.py  environment.py  notifications.py  pharmacies.py  users.py
app/services/: appointment_service.py  auth_service.py  clinic_service.py  doctor_service.py  environment_service.py  notification_service.py  pharmacy_service.py  user_service.py
scripts/: create_test_db.py  init_db.py  migrate.py  send_admin_notification.py  setup_quality_tools.py
tests/: conftest.py  test_admin.py  test_appointments.py  test_caching.py  test_clinic_endpoints.py  test_clinics.py  test_doctor_clinics.py  test_doctor_endpoints.py  test_notifications.py  test_pharmacies.py
