[project]
name = "medico24-backend"
version = "0.1.0"
description = "Enterprise-grade FastAPI backend for Medico24"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "firebase-admin>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "black==25.12.0",
    "isort>=5.13.2",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit[toml]>=1.7.10",
    "pydocstyle>=6.3.0",
    "detect-secrets>=1.5.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py314"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | venv
  | build
  | dist
  | alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "alembic/versions",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "B",     # flake8-bugbear
    "Q",     # flake8-quotes
    "C90",   # mccabe complexity
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "BLE",   # flake8-blind-except
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented code)
    "PD",    # pandas-vet
    "PL",    # pylint
    "TRY",   # tryceratops
    "NPY",   # numpy-specific rules
    "RUF",   # Ruff-specific rules
]

ignore = [
    "E501",    # line too long (handled by black)
    "ANN001",  # missing type annotation for function argument
    "ANN002",  # missing type annotation for *args
    "ANN003",  # missing type annotation for **kwargs
    "ANN201",  # missing return type annotation for public function
    "ANN202",  # missing return type annotation for private function
    "ANN204",  # missing return type annotation for special method
    "ANN401",  # dynamically typed expressions (Any)
    "S101",    # use of assert (needed for pytest)
    "PLR0913", # too many arguments
    "COM812",  # trailing comma missing (conflicts with formatter)
    "ISC001",  # implicit string concatenation (conflicts with formatter)

    # Exception handling style (too pedantic for existing codebase)
    "EM101",   # exception must not use string literal
    "EM102",   # exception must not use f-string literal
    "TRY003",  # avoid specifying long messages outside exception class
    "TRY300",  # consider moving statement to else block
    "B904",    # use 'raise from' to distinguish exceptions
    "BLE001",  # do not catch blind exception (needed for resilient error handling)

    # Code style (opinionated)
    "PLW0603", # global statement (needed for singleton pattern)
    "PTH110",  # os.path.exists -> Path.exists (not critical)
    "RET504",  # unnecessary assignment before return (reduces readability sometimes)
    "PLR2004", # magic values in comparisons (acceptable for simple cases)
    "RUF005",  # iterable unpacking (list concatenation is clearer)
    "SIM102",  # single if statement (nested ifs can be clearer)

    # Security false positives
    "S106",    # hardcoded password (false positive for token_type="bearer")
    "S603",    # subprocess without shell=True is safe

    # Logging
    "TRY400",  # use logging.exception (not always appropriate)

    # Function arguments
    "ARG001",  # unused function argument (needed for interface compliance)

    # Datetime (PostgreSQL handles timezone, utcnow() is acceptable)
    "DTZ003",  # datetime.utcnow() (database handles timezone conversion)

    # FastAPI patterns
    "B008",    # function call in argument defaults (FastAPI Depends pattern)

    # Naming conventions (legacy code)
    "N818",    # exception naming with Error suffix

    # Import locations
    "PLC0415", # import should be at top level (sometimes needed for circular imports)

    # Security false positives
    "S104",    # binding to all interfaces (0.0.0.0 is intentional for containers)
    "S105",    # hardcoded password (false positive for token_type="bearer")

    # Commented code (common in examples/config files)
    "ERA001",  # found commented-out code
]

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ARG",     # unused arguments allowed in tests
    "PLR2004", # magic values allowed in tests
    "ANN",     # type annotations not required in tests
    "T201",    # print allowed in tests (for safety warnings)
    "E402",    # module import not at top (load_dotenv needs to be first)
    "DTZ003",  # datetime.utcnow() allowed in test fixtures
]
"alembic/**/*.py" = [
    "ANN",     # type annotations not required in migrations
    "INP001",  # implicit namespace package
]
"scripts/**/*.py" = [
    "T20",     # print allowed in scripts
    "ANN",     # type annotations not required in scripts
    "BLE001",  # blind exception catch allowed in scripts
    "PLR2004", # magic values allowed in scripts
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
check_untyped_defs = false
no_implicit_reexport = false
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = [
    "alembic/versions",
    "tests",
    "venv",
    ".venv",
]

[[tool.mypy.overrides]]
module = [
    "passlib.*",
    "jose.*",
    "redis.*",
    "structlog.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bandit]
exclude_dirs = ["/tests", "/alembic", "/scripts", "/.venv", "/venv"]
skips = ["B101", "B601"]  # B101: assert_used (needed for tests), B601: paramiko calls

[tool.pydocstyle]
convention = "google"
add_ignore = "D100,D104,D105,D107"
match = "(?!test_).*\\.py"
match_dir = "^(?!(tests|alembic|scripts|\\.))"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"
